--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
             <p class="about info4 slide-anim-r">When I am not working these days I spend most of my time coding or reading about software. My goal is to one day run a small development firm working on applications and mobile games. Recently my brother and I have been working on a mobile game that we are playing to release in the near future. To view some of my projects check out the projects tab and hope to work with you in the future.</p>
         </div>
         <div class="resume-bg">
-            <a href=""blank">My Resume</a>
+            <a href="documents/Wyatt_Henderson_Web_Developer.pdf" target="blank">My Resume</a>
         </div>
     </div>
 
