Fixing Bug with View Project Button

--- a/index.html
+++ b/index.html
@@ -9,13 +9,7 @@
     <div class="title-box">
         <div class="title slide-anim-l">
             <h1 class="fade-in"><p class="Name">Wyatt Henderson</p>Your Full Stack Developer</h1>
-            <a href="projects.html">
-                <div class="vmp-bg">
-                    <p>View my Projects</p>
-                </div>
-            </a>
-            
-            
+            <div class="vmp-bg"><a href="projects.html">View My Projects</a></div>
         </div>
     </div>
 
