--- a/projects.html
+++ b/projects.html
@@ -79,6 +79,90 @@
 
             </div>
 
+            <div class="project fade-in">
+
+                <div class="project-info">
+                    <h3>Customizable List</h3>
+                    <p>This was an introduction project<br>covering the basics of DOM manipulation</p>
+                    <h4>Built With :</h4>
+                    <div class="components">
+                        <img class="icon" src="./images/HTML5_Icon.png" alt="HTML">
+                        <img class="icon" src="./images/CSS3-Icon.png" alt="CSS">
+                        <img class="icon" src="./images/JS-Icon.png" alt="javascript">
+                    </div>
+
+                </div>
+
+                <div class="image-box slide-anim-l">
+                    <a href="https://toto-titan-developer.github.io/Customizable_List/" target="blank">
+                        <img class="project-image" src="./images/CustomList_Project.png" alt="project"></a>
+                </div>
+
+            </div>
+
+            <div class="project fade-in">
+
+                <div class="project-info">
+                    <h3>Customizable List</h3>
+                    <p>This was an introduction project<br>covering the basics of DOM manipulation</p>
+                    <h4>Built With :</h4>
+                    <div class="components">
+                        <img class="icon" src="./images/HTML5_Icon.png" alt="HTML">
+                        <img class="icon" src="./images/CSS3-Icon.png" alt="CSS">
+                        <img class="icon" src="./images/JS-Icon.png" alt="javascript">
+                    </div>
+
+                </div>
+
+                <div class="image-box slide-anim-l">
+                    <a href="https://toto-titan-developer.github.io/Customizable_List/" target="blank">
+                        <img class="project-image" src="./images/CustomList_Project.png" alt="project"></a>
+                </div>
+
+            </div>
+
+            <div class="project fade-in">
+
+                <div class="project-info">
+                    <h3>Customizable List</h3>
+                    <p>This was an introduction project<br>covering the basics of DOM manipulation</p>
+                    <h4>Built With :</h4>
+                    <div class="components">
+                        <img class="icon" src="./images/HTML5_Icon.png" alt="HTML">
+                        <img class="icon" src="./images/CSS3-Icon.png" alt="CSS">
+                        <img class="icon" src="./images/JS-Icon.png" alt="javascript">
+                    </div>
+
+                </div>
+
+                <div class="image-box slide-anim-l">
+                    <a href="https://toto-titan-developer.github.io/Customizable_List/" target="blank">
+                        <img class="project-image" src="./images/CustomList_Project.png" alt="project"></a>
+                </div>
+
+            </div>
+
+            <div class="project fade-in">
+
+                <div class="project-info">
+                    <h3>Customizable List</h3>
+                    <p>This was an introduction project<br>covering the basics of DOM manipulation</p>
+                    <h4>Built With :</h4>
+                    <div class="components">
+                        <img class="icon" src="./images/HTML5_Icon.png" alt="HTML">
+                        <img class="icon" src="./images/CSS3-Icon.png" alt="CSS">
+                        <img class="icon" src="./images/JS-Icon.png" alt="javascript">
+                    </div>
+
+                </div>
+
+                <div class="image-box slide-anim-l">
+                    <a href="https://toto-titan-developer.github.io/Customizable_List/" target="blank">
+                        <img class="project-image" src="./images/CustomList_Project.png" alt="project"></a>
+                </div>
+
+            </div>
+
         </div>
     </div>
 
