--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
     <title>W.H About Me</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body class="bkg_2 bkg-st">
-    <!-- <div class="bkg_2 bkg-st"></div> -->
+<body>
+    <div class="bkg_2 bkg-st"></div>
     <div class="profile_container">
         <div class="profile_header fade-in">
             <div class="profile_style">
