--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>W.H Projects</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -18,7 +20,7 @@
 
                 <div class="project-info">
                     <h3>Customizable List</h3>
-                    <p>This was an introduction project<br>covering the basics of DOM manipulation</p>
+                    <p>This was an introduction project covering the basics of DOM manipulation</p>
                     <h4>Built With :</h4>
                     <div class="components">
                         <img class="icon" src="./images/HTML5_Icon.png" alt="HTML">
@@ -40,7 +42,7 @@
 
                 <div class="project-info">
                     <h3>Robo Friends</h3>
-                    <p>This was an introduction project<br>covering the basics of React</p>
+                    <p>This was an introduction project covering the basics of React</p>
                     <h4>Built With :</h4>
                     <div class="components">
                         <img class="icon" src="./images/HTML5_Icon.png" alt="HTML">
@@ -62,7 +64,7 @@
 
                 <div class="project-info">
                     <h3>Star Wars Character Generator</h3>
-                    <p>This was an introduction project<br>covering the basics of using an  API</p>
+                    <p>This was an introduction project covering the basics of using an  API</p>
                     <h4>Built With :</h4>
                     <div class="components">
                         <img class="icon" src="./images/HTML5_Icon.png" alt="HTML">
