--- a/about.html
+++ b/about.html
@@ -11,14 +11,14 @@
     <div class="profile_container">
         <div class="profile_header fade-in">
             <div class="profile_style">
-                <img class="logo-2" src="images/cloud_icon.png" alt="cloud">
+                <img class="logo-2" src="images/cloud_icon_3.png" alt="cloud">
             </div>
             <div class="profile_style">
                 <h1 class="Name">About Me</h1>
                 <img class="profile_pic" src="images/ProfilePic_1 (2).JPG" alt="head shot">              
             </div>           
             <div class="profile_style">
-                <img class="logo-2" src="images/cloud_icon.png" alt="cloud">
+                <img class="logo-2" src="images/cloud_icon_3.png" alt="cloud">
             </div>           
         </div>
         <div class="profile_about">
