--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                 <div  class="form-box" data-netlify-recaptcha="true"></div> <br>
 
                 <button type="submit" class="submit form-box">
-                    <img class="logo" src="images/mail_icon2.png" alt="mail">
+                    <img class="logo" src="images/maill_icon8.png" alt="mail">
                     Send
                 </button>
                 <div></div>
