--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     <div class="bkg_2 bkg-st"></div>
     <div id="page-container">
         <div class="title-container fade-in">
-            <h1 class="Name slide-anim-l"><img class="logo-3" src="images/idea_icon.png" alt="icon">My Projects</h1>
+            <h1 class="Name slide-anim-l"><img class="logo-3" src="images/idea_icon_1.png" alt="icon">My Projects</h1>
         </div>
 
         <div class="projects-container">
