Changing List Project

--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
                 </div>
 
                 <div class="image-box slide-anim-l">
-                    <a href="https://toto-titan-developer.github.io/Customizable_List/" target="blank">
+                    <a href="https://toto-titan-developer.github.io/TodoList_React/" target="blank">
                         <img class="project-image" src="./images/CustomList_Project.png" alt="project"></a>
                 </div>
 
