--- a/projects.html
+++ b/projects.html
@@ -19,20 +19,21 @@
             <div class="project fade-in">
 
                 <div class="project-info">
-                    <h3>Customizable List</h3>
+                    <h3>Todo List App</h3>
                     <p>This was an introduction project covering the basics of DOM manipulation</p>
                     <h4>Built With :</h4>
                     <div class="components">
                         <img class="icon" src="./images/HTML5_Icon.png" alt="HTML">
                         <img class="icon" src="./images/CSS3-Icon.png" alt="CSS">
                         <img class="icon" src="./images/JS-Icon.png" alt="javascript">
+                        <img class="icon" src="./images/React_Icon.png" alt="React">
                     </div>
 
                 </div>
 
                 <div class="image-box slide-anim-l">
-                    <a href="https://toto-titan-developer.github.io/TodoList_React/" target="blank">
-                        <img class="project-image" src="./images/CustomList_Project.png" alt="project"></a>
+                    <a href="https://toto-titan-developer.github.io/todolist_react/" target="blank">
+                        <img class="project-image" src="./images/Todo_List.png" alt="project"></a>
                 </div>
 
             </div>
